# TK_LK_PRO

backend/: db.sqlite3  debug_track.py  pyproject.toml  test_api.py
backend/api/: __init__.py  admin.py  models.py  serializers.py  urls.py  views.py
backend/api/migrations/: 0001_initial.py
backend/api/services/: autograph.py
backend/api/utils/: cache.py  exceptions.py
backend/api/views/: __init__.py  analytics.py  auth.py  legacy.py  vehicles.py
backend/core/: settings.py  urls.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/Dashboard/: ChartsTab.jsx  OnlineTab.jsx  ReportsTab.jsx  VehicleCard.jsx
frontend/src/components/Dashboard/ChartBuilder/: Chart3DView.jsx  ChartContainer.jsx  ChartStylePanel.jsx  DataSelector.jsx  ExportControls.jsx  LayoutManager.jsx  MultiChartGrid.jsx
frontend/src/components/Dashboard/ChartCanvas/: Chart3DView.jsx  ChartContainer.jsx  MultiChartGrid.jsx
frontend/src/components/Dashboard/ChartTypes/: Line3DChart.jsx  Pie3DChart.jsx
frontend/src/components/Layout/: Header.jsx  SettingsPanel.jsx
frontend/src/components/UI/: ChartComponent.jsx  VehicleCard.jsx
frontend/src/contexts/: AuthContext.jsx  ThemeContext.jsx
frontend/src/hooks/: useAnalytics.js  useAuth.js  useTheme.js  useVehicles.js
frontend/src/pages/: Analytics.jsx  ChartsPage.jsx  OnlinePage.jsx
frontend/src/services/: analytics.js  api.js  auth.js  vehicles.js
frontend/src/styles/: globals.css
frontend/src/utils/: constants.js
